<resources>
    <string name="app_name">Fud</string>
    <string name="app_title">FUD</string>
    <string name="eventsList">Events List</string>
    <string name="eventFilters">Event Filters</string>
    <string name="CreateEventLabel">Create Event</string>
    <string name="Filters">Filters</string>
    <string name="CreateEventTitle">Create New Event</string>
    <string name="MaxDistanceLabel">Max Distance</string>
    <string name="MaxPriceLabel">Price Limit</string>
    <string-array name="food_tags">
        <item>Chinese</item>
        <item>Italian</item>
        <item>BBQ</item>
        <item>Pizza</item>
        <item>American</item>
        <item>Mexican</item>
        <item>Halal</item>
        <item>Desserts</item>
        <item>Free Candy!</item>
    </string-array>

    <string name="title_activity_event_details">EventDetails</string>

    <string name="title_activity_fake_event">FakeEvent</string>
    <string name="title_activity_route">Map</string>
    <string name="title_activity_routing">Routing</string>
</resources>
