<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="mainvm"
            type="fud.fud.MainActivityVM" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <android.support.constraint.Guideline
            android:id="@+id/CenterLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="199dp" />

        <TextView
            android:id="@+id/FudTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/EventsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:text="@string/eventsList"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/CenterLine"
            app:layout_constraintTop_toBottomOf="@+id/FudTitle" />

        <TextView
            android:id="@+id/EventFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:text="@string/eventFilters"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/CenterLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FudTitle" />

        <LinearLayout
            android:id="@+id/FiltersLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="100dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/CenterLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EventFilters">

            <Switch
                android:id="@+id/Filter1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@={mainvm.Filter1}"
                tools:text="Filter 1" />

            <Switch
                android:id="@+id/Filter3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={mainvm.filterFour}"
                tools:text="Filter 3" />

            <TextView
                android:id="@+id/DistanceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MaxDistanceLabel"
                android:textAlignment="center"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/DistanceSeekBar"
                android:layout_width="match_parent"
                android:layout_height="40dp" />


            <TextView
                android:id="@+id/PriceLimitLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MaxPriceLabel"
                android:textAlignment="center"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/PriceLimitSeekBar"
                android:layout_width="match_parent"
                android:layout_height="40dp" />


            <Spinner
                android:id="@+id/FoodTagsSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adapter="@{mainvm.foodTypeFilters}"/>
        </LinearLayout>


        <ListView
            android:id="@+id/EventsList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/CenterLine"
            app:layout_constraintTop_toBottomOf="@+id/EventsTitle"
            android:adapter="@{mainvm.EventsListAdapter}"
            android:onItemSelected=""/>


        <Button
            android:id="@+id/CreateEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="48dp"
            android:text="@string/CreateEventLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/CenterLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FiltersLayout" />
        //android:onClickListener="@{() -> mainvm.onclickCreateEvent()}"/>



    </android.support.constraint.ConstraintLayout>


</layout>


